feat: 引入样式表并改进UI组件
- 提取内联样式至共享的style.css文件，提升代码复用性和可维护性
- 为快速发送列表、按钮和表单元素等UI组件应用统一样式
- 改进关于信息处理逻辑，支持解析package.json中的作者对象
- 为终端添加“清空日志”功能按钮
- 优化首选项和过滤窗口页面的视觉设计

--- a/filter.html
+++ b/filter.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <title>Filter Window</title>
     <link rel="stylesheet" href="node_modules/@xterm/xterm/css/xterm.css" />
+    <link rel="stylesheet" href="style.css" />
     <style>
         body {
-            margin: 0;
-            padding: 0;
-            background-color: #000;
-            color: #ccc;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             display: flex;
             flex-direction: column;
             height: 100vh;
@@ -18,9 +14,9 @@
         }
 
         #controls {
-            padding: 10px;
-            background-color: #252526;
-            border-bottom: 1px solid #333;
+            padding: 12px;
+            background-color: var(--bg-secondary);
+            border-bottom: 1px solid var(--border-color);
             display: flex;
             gap: 10px;
             align-items: center;
@@ -28,51 +24,13 @@
 
         #filter-input {
             flex: 1;
-            padding: 5px 10px;
-            border-radius: 4px;
-            border: 1px solid #3c3c3c;
-            background-color: #3c3c3c;
-            color: #fff;
-            outline: none;
-        }
-
-        #filter-input:focus {
-            border-color: #007acc;
-        }
-
-        button {
-            padding: 5px 15px;
-            background-color: #0e639c;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #1177bb;
         }
 
         #terminal-container {
             flex: 1;
             overflow: hidden;
-            padding: 5px;
-        }
-        
-        /* Scrollbar styling */
-        ::-webkit-scrollbar {
-            width: 10px;
-            height: 10px;
-        }
-        ::-webkit-scrollbar-track {
-            background: #1e1e1e; 
-        }
-        ::-webkit-scrollbar-thumb {
-            background: #424242; 
-            border-radius: 5px;
-        }
-        ::-webkit-scrollbar-thumb:hover {
-            background: #4f4f4f; 
+            padding: 0;
+            background: #000;
         }
     </style>
 </head>
