--- a/index.html
+++ b/index.html
@@ -4,260 +4,13 @@
     <meta charset="UTF-8">
     <title>Serial Terminal</title>
     <link rel="stylesheet" href="node_modules/@xterm/xterm/css/xterm.css" />
+    <link rel="stylesheet" href="style.css" />
     <style>
-        /* Global Scrollbar Styling */
-        ::-webkit-scrollbar {
-            width: 10px;
-            height: 10px;
-        }
-        ::-webkit-scrollbar-track {
-            background: transparent; 
-        }
-        ::-webkit-scrollbar-thumb {
-            background: #444;
-            border-radius: 4px;
-        }
-        ::-webkit-scrollbar-thumb:hover {
-            background: #555;
-        }
-
         body {
-            margin: 0;
-            padding: 0;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            background: #1e1e1e;
-            color: #ccc;
             height: 100vh;
             display: flex;
             flex-direction: row;
             overflow: hidden;
-        }
-        .sidebar {
-            width: 200px;
-            background: #252526;
-            display: flex;
-            flex-direction: column;
-            padding: 0;
-            border-right: 1px solid #333;
-            flex-shrink: 0;
-            overflow: hidden;
-        }
-        .sidebar-header {
-            padding: 10px;
-            background: #252526;
-            border-bottom: 1px solid #333;
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-            flex-shrink: 0;
-        }
-        .sidebar-tabs {
-            display: flex;
-            background: #1e1e1e;
-            border-bottom: 1px solid #333;
-            flex-shrink: 0;
-        }
-        .sidebar-tab {
-            flex: 1;
-            padding: 8px 0;
-            text-align: center;
-            cursor: pointer;
-            color: #888;
-            font-size: 16px;
-            border: none;
-            background: transparent;
-            border-bottom: 2px solid transparent;
-            transition: all 0.2s;
-            border-radius: 0;
-        }
-        .sidebar-tab:hover {
-            background: #2a2d2e;
-            color: #ccc;
-        }
-        .sidebar-tab.active {
-            color: #fff;
-            border-bottom-color: #007acc;
-            background: #252526;
-        }
-        .sidebar-content {
-            flex: 1;
-            overflow-y: auto;
-            padding: 10px;
-            background: #252526;
-        }
-        .sidebar-tab-pane {
-            display: none;
-            animation: fadeIn 0.2s;
-        }
-        .sidebar-tab-pane.active {
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-        }
-        .sidebar-footer {
-            padding: 10px;
-            border-top: 1px solid #333;
-            background: #252526;
-            flex-shrink: 0;
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-        }
-        .mode-toggle {
-            display: flex;
-            flex-direction: column;
-            gap: 5px;
-            width: 100%;
-        }
-        .mode-btn {
-            padding: 10px 12px;
-            border-radius: 6px;
-            cursor: pointer;
-            font-size: 14px;
-            color: #aaa;
-            transition: all 0.2s;
-            border: none;
-            background: transparent;
-            text-align: left;
-            width: 100%;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-        }
-        .mode-btn:hover {
-            background: #333;
-            color: #fff;
-        }
-        .mode-btn.active {
-            background: #007acc;
-            color: #fff;
-        }
-        .settings-btn {
-            margin-top: auto;
-            padding: 10px 12px;
-            cursor: pointer;
-            color: #ccc;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            border-radius: 6px;
-            width: 100%;
-            box-sizing: border-box;
-            transition: all 0.2s;
-        }
-        .settings-btn:hover {
-            background: #333;
-            color: #fff;
-        }
-        .main-container {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            padding: 0;
-            background: #1e1e1e;
-            overflow: hidden;
-            height: 100vh;
-        }
-        .terminal-wrapper {
-            flex: 1;
-            background: #000;
-            overflow: hidden;
-        }
-        .controls {
-            padding: 0;
-            background: transparent;
-            border-radius: 0;
-            margin-bottom: 0;
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-            border: none;
-            animation: fadeIn 0.3s ease-in;
-            border-top: 1px solid #333;
-            padding-top: 10px;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-        select, button, input, textarea {
-            background: #3c3c3c;
-            color: #fff;
-            border: 1px solid #555;
-            padding: 8px 12px;
-            font-size: 13px;
-            border-radius: 6px;
-            outline: none;
-            width: 100%;
-            box-sizing: border-box;
-        }
-        textarea {
-            resize: vertical;
-            font-family: Consolas, "Courier New", monospace;
-        }
-        button {
-            background: #007acc;
-            border: none;
-            cursor: pointer;
-            transition: background 0.2s;
-        }
-        button:hover {
-            background: #008be5;
-        }
-        button.secondary {
-            background: #444;
-        }
-        button.secondary:hover {
-            background: #555;
-        }
-        .status {
-            font-size: 12px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 6px;
-            margin-top: 5px;
-            padding: 5px;
-            background: #1e1e1e;
-            border-radius: 4px;
-        }
-        .status-dot {
-            width: 8px;
-            height: 8px;
-            border-radius: 50%;
-            background: #ff4d4f;
-        }
-        .status-dot.online {
-            background: #52c41a;
-        }
-        /* Advanced Settings Styles */
-        details {
-            width: 100%;
-            border: 1px solid #333;
-            border-radius: 6px;
-            background: #2d2d2d;
-            overflow: hidden;
-        }
-        summary {
-            padding: 8px 12px;
-            cursor: pointer;
-            font-size: 13px;
-            color: #ccc;
-            user-select: none;
-            background: #333;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-        summary:hover {
-            background: #3c3c3c;
-            color: #fff;
-        }
-        .advanced-content {
-            padding: 10px;
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
         }
     </style>
 </head>
@@ -265,11 +18,15 @@
     <div class="sidebar">
         <!-- Persistent Header -->
         <div class="sidebar-header">
-            <select id="port-select" title="Select Serial Port">
-                <option value="">Select Port</option>
-            </select>
+            <div style="display: flex; gap: 5px;">
+                <select id="port-select" title="Select Serial Port" style="flex: 1; width: 0;">
+                    <option value="">Select Port</option>
+                </select>
+                <button class="secondary" id="refresh-btn" style="flex: 0 0 auto; padding: 0 10px;" title="Refresh Ports">🔄</button>
+            </div>
+
             <div id="baud-container" style="position: relative;">
-                <select id="baud-select" title="Select Baud Rate">
+                <select id="baud-select" title="Select Baud Rate" style="width: 100%;">
                     <option value="110">110</option>
                     <option value="300">300</option>
                     <option value="600">600</option>
@@ -293,15 +50,13 @@
                     <option value="custom">✎ Custom...</option>
                 </select>
                 <div id="baud-custom-wrapper" style="display: none; display: flex; gap: 5px;">
-                    <input type="number" id="baud-custom-input" placeholder="Baud Rate">
+                    <input type="number" id="baud-custom-input" placeholder="Baud Rate" style="flex: 1; width: 0;">
                     <button id="baud-custom-cancel" class="secondary" style="width: auto; padding: 0 8px;" title="Back to list">✕</button>
                 </div>
             </div>
 
-            <div style="display: flex; gap: 5px;">
-                <button id="connect-btn" style="flex: 2;">⚡ Connect</button>
-                <button class="secondary" id="refresh-btn" style="flex: 1;" title="Refresh Ports">🔄</button>
-            </div>
+            <button id="connect-btn" style="width: 100%;">⚡ Connect</button>
+            <button id="clear-btn" class="secondary" title="Clear Terminal Output" style="width: 100%;">🗑️ Clear Log</button>
 
             <div class="status">
                 <div id="status-dot" class="status-dot"></div>
@@ -354,12 +109,12 @@
                     <option value="cr">NL: CR / CR</option>
                 </select>
 
-                <div id="display-controls" style="display: flex; flex-direction: column; gap: 8px; padding-top: 5px; border-top: 1px solid #444;">
-                    <label style="display: flex; align-items: center; gap: 8px; font-size: 13px; cursor: pointer; color: #ccc;">
-                        <input type="checkbox" id="show-timestamp" style="width: auto; margin: 0;"> 🕒 Show Time
+                <div id="display-controls" class="settings-group">
+                    <label>
+                        <input type="checkbox" id="show-timestamp"> 🕒 Show Time
                     </label>
-                    <label style="display: flex; align-items: center; gap: 8px; font-size: 13px; cursor: pointer; color: #ccc;">
-                        <input type="checkbox" id="show-lineno" style="width: auto; margin: 0;"> 🔢 Show Line #
+                    <label>
+                        <input type="checkbox" id="show-lineno"> 🔢 Show Line #
                     </label>
                 </div>
             </div>
@@ -371,34 +126,34 @@
                     <button id="find-prev-btn" style="flex: 1;">Prev</button>
                     <button id="find-next-btn" style="flex: 1;">Next</button>
                 </div>
-                <label style="display: flex; align-items: center; gap: 8px; font-size: 13px; cursor: pointer; color: #ccc; margin-top: 5px;">
-                    <input type="checkbox" id="search-regex" style="width: auto; margin: 0;"> .* Regex
+                <label style="margin-top: 5px;">
+                    <input type="checkbox" id="search-regex"> .* Regex
                 </label>
-                <label style="display: flex; align-items: center; gap: 8px; font-size: 13px; cursor: pointer; color: #ccc;">
-                    <input type="checkbox" id="search-case" style="width: auto; margin: 0;"> Aa Case Sensitive
+                <label>
+                    <input type="checkbox" id="search-case"> Aa Case Sensitive
                 </label>
-                <label style="display: flex; align-items: center; gap: 8px; font-size: 13px; cursor: pointer; color: #ccc;">
-                    <input type="checkbox" id="search-word" style="width: auto; margin: 0;"> 🔠 Whole Word
+                <label>
+                    <input type="checkbox" id="search-word"> 🔠 Whole Word
                 </label>
             </div>
 
             <!-- Send Tab -->
             <div id="tab-send" class="sidebar-tab-pane">
                 <!-- Auto Send -->
-                <div style="border-bottom: 1px solid #444; padding-bottom: 8px; margin-bottom: 8px;">
+                <div style="border-bottom: 1px solid var(--border-color); padding-bottom: 8px; margin-bottom: 8px;">
                     <div style="display: flex; align-items: center; gap: 5px; margin-bottom: 5px;">
-                        <input type="checkbox" id="auto-send-enable" style="width: auto; margin: 0;">
-                        <label for="auto-send-enable" style="font-size: 13px; color: #ccc; cursor: pointer;">Auto Send</label>
+                        <input type="checkbox" id="auto-send-enable">
+                        <label for="auto-send-enable" style="font-size: 13px; color: var(--text-primary); cursor: pointer; display: inline;">Auto Send</label>
                         <input type="number" id="auto-send-interval" placeholder="ms" value="1000" style="width: 60px; padding: 4px; margin-left: auto;">
                     </div>
                     <textarea id="auto-send-text" placeholder="Text to auto send..." style="margin-bottom: 5px; height: 60px;"></textarea>
                 </div>
         
                 <!-- Quick Send -->
-                <div style="font-size: 13px; margin-bottom: 5px; color: #ccc; display: flex; justify-content: space-between; align-items: center;">
+                <div style="font-size: 13px; margin-bottom: 5px; color: var(--text-primary); display: flex; justify-content: space-between; align-items: center;">
                     <span>Quick Send List</span>
                 </div>
-                <div id="quick-send-list" style="display: flex; flex-direction: column; gap: 5px; max-height: 200px; overflow-y: auto; margin-bottom: 8px;">
+                <div id="quick-send-list" class="quick-send-list-container">
                     <!-- Items will be added here -->
                 </div>
                 
@@ -411,8 +166,8 @@
         </div>
 
         <div class="sidebar-footer">
-            <button id="new-filter-window-btn" style="background-color: #4CAF50;">➕ Filter Window</button>
-            <div class="settings-btn" id="open-prefs" title="Settings" style="justify-content: center;">
+            <button id="new-filter-window-btn" class="footer-btn primary">➕ Filter Window</button>
+            <div id="open-prefs" class="footer-btn settings" title="Settings">
                 ⚙️ Global Settings
             </div>
         </div>
